added some comments and refactored order

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         <form id='login-form' onsubmit="">
             <table id="table">
                 <tbody id="tbody">
-                    <input type="text" id="inp" name="query" placeholder="Search Food" autocomplete="off">
+                    <input type="text" id="inp" name="query" placeholder="Find a Recipe" autocomplete="off">
                     <input type="submit" id="btn" class="btn"/>
                 </tbody>
             </table>
