--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,8 @@
     </div>
 </body>
 <script type="text/javascript" src="{{
+    url_for('static', filename='js/secrets.js') }}"></script>
+<script type="text/javascript" src="{{
     url_for('static', filename='js/app.js') }}"></script>
-<!-- <script type="text/javascript" src="{{
-    url_for('static', filename='js/secrets.js') }}"></script> -->
+
 </html>
